<?xml version="1.0"?>
<package>
  <name>kinect_tracker</name>
  <version>0.0.1</version>
  <description>A package for getting player features using microsoft kinect 2. Using freenect2
  library the code searches for a pre-set color blog on the RGB frame and using the aligned depth
  frame gets the middle point of the blob in x-y pixel coordinates (representing its relative 
  position on the camera). From that it uses region growing algorithm in order to segment the player
  using the blob position as seed. The player is assumed to be wearing the color and the environment
  assumed to be controlled (without other similar colors on sight of view). From the segmented image
  the node publishes features like:
  
  	distance: the distance in meters from the camera to the seed. Calculated as an average of distance 
  	values around the seed.
  	proximity: the distance normalized [0,1]. Tends to 1 if the playes approaches the robot. Takes into
  	consideration the kinect specs. Minimum distance of 0.5 and maximum of 4.5
  	ci: 	contraction index. A normalized [0,1] measure of how open wide (legs and arms) the player is.
  	Calculated as subtraction of surrounding rectangle. 
  </description>

  <maintainer email="ewerlopes@gmail.com">ewerlopes</maintainer>


  <license>MIT</license>


  <build_depend>kinect_tracker/msg</build_depend>
  <run_depend>kinect_tracker/msg</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>libfreenect2</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>libfreenect2</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
