<?xml version="1.0"?>
<package>
  <name>r2p</name>
  <version>0.1.0</version>
  <description>R2P messages package</description>
  <maintainer email="martino.migliavacca@gmail.com">Martino Migliavacca</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
