<?xml version="1.0"?>
<package>
  <name>robogame</name>
  <version>0.0.1</version>
  <description>This is the metapackage of the robogame</description>
  <maintainer email="ewerlopes@gmail.com">Ewerton Lopes</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>behavior_tree_core</run_depend>
  <run_depend>behavior_tree_leaves</run_depend>
  <run_depend>robogame_bt</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
