<?xml version="1.0"?>
<package>
  <name>robogame</name>
  <version>0.0.1</version>
  <description>This is the metapackage of the robogame</description>
  <maintainer email="ewerlopes@gmail.com">Ewerton Lopes</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robogame_arduino</run_depend>
  <run_depend>robogame_arduino</run_depend>
  <run_depend>robogame_game_manager</run_depend>
  <run_depend>robogame_game_manager</run_depend>
  <run_depend>robogame_joystick</run_depend>
  <run_depend>robogame_joystick</run_depend>
  <run_depend>robogame_imu_sensor</run_depend>
  <run_depend>robogame_imu_sensor</run_depend>
  <run_depend>robogame_kinectfeatures_extractor</run_depend>
  <run_depend>robogame_proximity_sensor</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
