<?xml version="1.0"?>
<package>
  <name>robogame</name>
  <version>0.0.1</version>
  <description>This is the metapackage of the robogame</description>
  <maintainer email="ewerlopes@gmail.com">Ewerton Lopes</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>activity_recognition</run_depend>
  <run_depend>arduino_publisher</run_depend>
  <run_depend>heartbeat</run_depend>
  <run_depend>joystick</run_depend>
  <run_depend>kinect_tracker</run_depend>
  <run_depend>logger</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>player_feature</run_depend>
  <run_depend>tower_manager</run_depend>
  <run_depend>video_recorder</run_depend>
  

  <export>
    <metapackage/>
  </export>
</package>
