<?xml version="1.0"?>
<package>
  <name>robogame_imu_sensor</name>
  <version>0.0.1</version>
  <description>This node publishes the data received from the imu MPU-6050 module. Essentially, 
  it is used for getting accelerometer and gyroscope data from the player. The 6-DOF module is
  attached to the player's arm</description>

  <maintainer email="ewerlopes@gmail.com">ewerlopes</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


</package>
