<?xml version="1.0"?>
<package>
  <name>robogame_video_recorder</name>
  <version>0.0.0</version>
  <description>The video_recorder package. Get images frames from available camera 
  and publish frames using image_transport data type.</description>

  <maintainer email="ewerlopes@todo.todo">ewerlopes</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
