<?xml version="1.0"?>
<package>
  <name>odometry_publisher</name>
  <version>0.0.0</version>
  <description>The odometry_publisher package</description>

  <maintainer email="TODO@example.org">TODO</maintainer>

  <license>BSD</license>

  <author>Enrico Piazza</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
