<?xml version="1.0"?>
<package>
  <name>triskar_msgs</name>
  <version>0.1.0</version>
  <description>The triskar package</description>

  <maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>

  <license>GPLv3</license>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
