<?xml version="1.0"?>
<package>
  <name>triskar</name>
  <version>0.1.0</version>
  <description>The triskar package</description>
  
  <maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>triskar_msgs</build_depend>
  <run_depend>triskar_msgs</run_depend>

</package>
